# ImageDithering

./: .clang-format  .gitignore  CMakeLists.txt  README.md
lib/Models/: CMakeLists.txt
lib/Models/include/Models/: Image.hpp  Pixel.hpp
lib/Models/src/: Image.cpp  Pixel.cpp
lib/Pixel/: CMakeLists.txt
lib/Pixel/include/Pixel/: Pixel.hpp
src/: main.cpp
